Update abstract following Emmanuel's comments

--- a/jfm/draft_p2_jfm.tex
+++ b/jfm/draft_p2_jfm.tex
@@ -83,8 +83,8 @@
 
 \newcommand{\ZZ}[1]{{\color{magenta}{#1}}}
 
-\title{\sout{Rare-event sampling applied to the simulation of extreme mechanical efforts exerted by a turbulent flow on a bluff body}
-\ZZ{Numerical study of extreme mechanical efforts exerted by a turbulent flow on a bluff body by direct and rare-event sampling techniques}
+\title{
+  Numerical study of extreme mechanical efforts exerted by a turbulent flow on a bluff body by direct and rare-event sampling techniques
 }
 
 \author{Thibault Lestang\aff{1}\aff{2}
@@ -98,18 +98,19 @@
 \maketitle
 
 \begin{abstract}
-	\ZZ{This study investigates by means of direct numerical simulation, extreme drag events exerted by a  turbulent flow on a bluff body and examine the relevance of statistical algorithms to sample efficiently these events. Two representative algorithms are examined: AMS and GKTL. Briefly mention differences and complementarity. What do we learn? The take-home message is...}
-\sout{This study evaluates the relevance of rare-event sampling techniques to accelerate the simulation of extreme mechanical efforts exerted by a turbulent flow impinging onto a bluff body.
-The main idea is to replace a long simulation by a set of much shorter ones, running in parallel, with dynamics that are replicated or pruned in order to sample large-amplitude events more frequently.
-%
-Such techniques have been shown to be efficient for a wide range of problems in statistical physics, computer science, biochemistry, enabling the simulation of rare  events otherwise out of reach by direct sampling.
-This work is the first application to fluid-structure interaction problems.
-%
-The drag experienced by a squared obstacle placed in a turbulent flow (in two dimensions) is taken as a representative case study to investigate the performance of two major rare-event sampling algorithms, namely the \ac{ams} and the \ac{gktl} algorithms.
-Practical evidence is given that the fast sweeping-time of fluid structures past the obstacle has a drastic influence on the efficiency of these two algorithms.
-While it is shown that the \ac{ams} algorithm does not yield significant run-time savings, the \ac{gktl} algorithm appears to be efficient to sample extreme fluctuations of the time-averaged drag and estimate related statistics such as return times.
-%
-Beyond the study of applicability of rare-event sampling techniques to a fluid-mechanical problem, this work also includes a detailed phenomenological description of extreme-drag events of a turbulent flow on a bluff body. }
+  This study investigates, by means of numerical simulations, extreme mechanical efforts exerted by a turbulent flow impinging onto a bluff body, and examines the relevance of statistical algorithms to efficiently sample these events.
+  The drag experienced by a squared obstacle placed in a turbulent channel flow (in two dimensions) is taken as a representative case study.
+  Direct sampling shows that extreme fluctuations are closely related to the presence of a strong vortex blocked in the near wake of the obstacle.
+  Two different algorithms are considered to speed up the sampling of such flow scenarii related to extreme values of the drag, namely the \ac{ams} and the \ac{gktl} algorithms.
+  The idea behind these algorithms is to replace a long simulation by a set of much shorter ones, running in parallel, with dynamics that are replicated or pruned to sample large-amplitude events more frequently.
+  These two algorithms are representative of the two main class of algorithms applicable to non-equilibrium and deterministic dynamics.
+  Whilst the \ac{ams} is general, the \ac{gktl} algorithm is particularly suited to sample trajectories based on the average value of a given observable.
+  These algorithms have been shown to be relevant for a wide range of problems in statistical physics, computer science, biochemistry, but it is here the first application to a fluid-structure interaction problem.
+  Practical evidence is given that the fast sweeping time of fluid structures past the obstacle has a strong
+  influence on the efficiency of the selection-and-cloning rules of these two algorithms. While
+  the \ac{ams} algorithm does not yield significant run-time savings as compared to direct
+  sampling, the \ac{gktl} algorithm appears to be efficient to sample extreme fluctuations of
+  the time-averaged drag and estimate related statistics such as return times.
 \end{abstract}
 
 \include{introduction}
