Minor fixes of typos and references

--- a/biblio.bib
+++ b/biblio.bib
@@ -389,9 +389,10 @@ title = {Three-Dimensional Neutron Streaming Calculations Using Adaptive Multile
 	isbn = {978-3-319-44647-9},
 	shorttitle = {The {Lattice} {Boltzmann} {Method}},
 	language = {en},
+	number = {},
 	urldate = {2018-06-10},
 	publisher = {Springer International Publishing},
-	author = {Kr{\"u}ger, Timm and Kusumaatmaja, Halim and Kuzmin, Alexandr and Shardt, Orest and Silva, Goncalo and Viggen, Erlend Magnus},
+	author = {Kr{\"{u}}ger, Timm and Kusumaatmaja, Halim and Kuzmin, Alexandr and Shardt, Orest and Silva, Goncalo and Viggen, Erlend Magnus},
 	year = {2017},
 }
 @article{lestang_computing_2018,
@@ -736,6 +737,38 @@ doi = {10.1119/1.18168},
   HAL_ID = {hal-01142704},
   HAL_VERSION = {v1},
 }
+@article{Cerou2007,
+	Author = {C{\'e}rou, Florent and Guyader, Arnaud},
+	Date-Modified = {2017-06-29 08:08:38 +0000},
+	Doi = {10.1080/07362990601139628},
+	Journal = {Stoch. Anal. Appl.},
+	Pages = {417--443},
+	Title = {{Adaptive multilevel splitting for rare event analysis}},
+	Volume = {25},
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1080/07362990601139628}}
+
+@article{Cerou2011,
+	Author = {C{\'e}rou, Fr{\'e}d{\'e}ric and Guyader, Arnaud and Leli{\`e}vre, Tony and Pommier, David},
+	Date-Modified = {2017-06-29 08:09:50 +0000},
+	Doi = {10.1063/1.3518708},
+	Journal = {J. Chem. Phys.},
+	Number = {5},
+	Pages = {054108},
+	Title = {{A multiple replica approach to simulate reactive trajectories}},
+	Volume = {134},
+	Year = {2011},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1063/1.3518708}}
+	
+@unpublished{Cerou2016,
+	Author = {Cerou, Frederic and Delyon, Bernard and Guyader, Arnaud and Rousset, Mathias},
+	Date-Modified = {2017-11-21 21:32:00 +0000},
+	Note = {arXiv:1611.00515},
+	Title = {{A Central Limit Theorem for Fleming-Viot Particle Systems with Soft Killing}},
+	Url = {https://arxiv.org/abs/1611.00515},
+	Year = {2016},
+	Bdsk-Url-1 = {https://arxiv.org/abs/1611.00515}}
+
 @article{kanev2010,
 author = {Kanev, Stoyan and van Engelen, Tim},
 title = {Wind turbine extreme gust control},
@@ -748,4 +781,29 @@ doi = {10.1002/we.338},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/we.338},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/we.338},
 year = {2010}
+}
+@Article{rodi1998,
+author = {W. Rodi},
+title = {Large-eddy simulations of the flow past bluff bodies: State-of-the art},
+journal = {JSME},
+year = {1998},
+volume = {41},
+pages = {361},
+}
+
+@Article{BGK,
+	author = {P. L. Bhatnagar and  E. P. Gross  and  M. Krook},
+	title = { A Model for Collision Processes in Gases. I. Small Amplitude Processes in Charged and Neutral One-Component Systems},
+	journal = { Physical Review},
+	year = {1954},
+	volume = {94},
+	number = { 3},
+	pages = {511},
+}
+
+@Book{succi_book,
+author = {S. Succi},
+title = {The Lattice Boltzmann Equation: For Complex States of Flowing Matter},
+publisher = {Oxford University Press},
+year = {2018},
 }
