--- a/jfm/appendix_perturbation.tex
+++ b/jfm/appendix_perturbation.tex
@@ -1,6 +1,6 @@
 \section{Perturbation at branching time}
 \label{app:perturb_branching_time}
-As mentioned in sections~\ref{sec:ams} and~\ref{sec:cloning}, the application of the \ac{ams} and the cloning algorithm to deterministic systems requires the addition of a perturbation to the initial condition of
+As mentioned in sections~\ref{sec:ams} and~\ref{sec:gktl}, the application of the \ac{ams} and the cloning algorithm to deterministic systems requires the addition of a perturbation to the initial condition of
 resampled trajectories.
 In the absence of any perturbation, the resampling would not yield new trajectories, but instead exact copies of the trajectories the resampling is based on.
 
