--- a/biblio.bib
+++ b/biblio.bib
@@ -492,7 +492,7 @@ month={Nov},}
   Volume = {126},
   Year = {2013}}	
 @book{DelMoralBook,
-  Author = {Pierre Del Moral},
+  Author = {Del Moral, Pierre},
   Publisher = {Springer-Verlag, New York},
   Title = {{Feynman-Kac Formulae: Genealogical and Interacting Particle Systems with Applications}},
   Year = {2004}}
@@ -807,3 +807,5 @@ title = {The Lattice Boltzmann Equation: For Complex States of Flowing Matter},
 publisher = {Oxford University Press},
 year = {2018},
 }
+
+@book{frisch_book, place={Cambridge}, title={Turbulence: The Legacy of A. N. Kolmogorov}, DOI={10.1017/CBO9781139170666}, publisher={Cambridge University Press}, author={Frisch, Uriel}, year={1995}}
