Add references suggested by referees

--- a/biblio.bib
+++ b/biblio.bib
@@ -809,3 +809,44 @@ year = {2018},
 }
 
 @book{frisch_book, place={Cambridge}, title={Turbulence: The Legacy of A. N. Kolmogorov}, DOI={10.1017/CBO9781139170666}, publisher={Cambridge University Press}, author={Frisch, Uriel}, year={1995}}
+
+@article {Mohamad-ws,
+author = {Mohamad, Mustafa A. and Sapsis, Themistoklis P.},
+title = {Sequential sampling strategy for extreme event statistics in nonlinear dynamical systems},
+volume = {115},
+number = {44},
+pages = {11138--11143},
+year = {2018},
+doi = {10.1073/pnas.1813263115},
+publisher = {National Academy of Sciences},
+issn = {0027-8424},
+URL = {https://www.pnas.org/content/115/44/11138},
+eprint = {https://www.pnas.org/content/115/44/11138.full.pdf},
+journal = {Proceedings of the National Academy of Sciences}
+}
+
+@article{Blonigan-ws,
+  title = {Are extreme dissipation events predictable in turbulent fluid flows?},
+  author = {Blonigan, Patrick J. and Farazmand, Mohammad and Sapsis, Themistoklis P.},
+  journal = {Phys. Rev. Fluids},
+  volume = {4},
+  issue = {4},
+  pages = {044606},
+  numpages = {21},
+  year = {2019},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevFluids.4.044606},
+  url = {https://link.aps.org/doi/10.1103/PhysRevFluids.4.044606}
+}
+
+@article{belenky-ws,
+author = {Belenky, Vadim and Weems, Kenneth and Lin, Woei-Min},
+year = {2016},
+month = {05},
+pages = {},
+title = {Split-time method for estimation of probability of capsizing caused by pure loss of stability},
+volume = {122},
+journal = {Ocean Engineering},
+doi = {10.1016/j.oceaneng.2016.04.011}
+}
