--- a/jfm/draft_p2_jfm.tex
+++ b/jfm/draft_p2_jfm.tex
@@ -206,7 +206,7 @@ More importantly, such algorithms have been shown to be useful for the study of 
 %
 Two algorithms that are a priori suitable for such dynamics are considered, namely, the Adaptive Multilevel Splitting (AMS) algorithm \citep{cerou_adaptive_2007} and the Giardina-Kurchan-Tailleur-Lecomte (GKTL) algorithm \citep{giardina_direct_2006}.}
 %
-
+\EL{Another problem related to rare events is the estimation of parameters or statistics from a limited number of samples.  Several authors have proposed original strategies  \citep{Mohamad-ws,Blonigan-ws} such as sequential sampling. These approaches and rare event algorithms could also be considered for applications in wave-structure problems, ship motion and load acting on offshore platforms \citep{belenky-ws}.}
 %
 % MOVED TO SECTION 4
 %
@@ -723,7 +723,7 @@ Among them the \ac{gktl} algorithm \citep{giardina_direct_2006} is particularly 
 %
 Recently the \ac{gktl} algorithm has proven to be extremely efficient to simulate extreme heat waves in a comprehensive climate model \citep{ragone_computation_2018}, with a gain of a factor 100 to 1000 for the computation time.}
 This achievement already represents a significant leap in the applicability of rare-event sampling to complex dynamical systems. 
-\EL{The aim of this part of our work is to test rare-event algorithms for fluid-structure interaction in a turbulent flow, which is a completely new field of application.} 
+\EL{The aim of this part of our work is to test rare-event algorithms for fluid-structure interaction in a turbulent flow, which is an unexplored area of application.} 
 
 
 
